--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <input type="text" id="inputText">
     <button onclick="sendData()">Отправить</button>
 </div>
-
+<div>
+    <input type="text" id="outputText">
+    <button onclick=" getData()">Получить</button>
+</div>
 <script>
     function sendData() {
         const text = document.getElementById("inputText").value;
@@ -25,6 +28,15 @@
             .then(response => console.log("Data sent successfully"))
             .catch(error => console.error("Error sending data"));
     }
+    function getData() {
+        fetch("http://localhost:8080/data")
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById("outputText").value = data;
+            })
+            .catch(error => console.error("Error getting data"));
+    }
+
 </script>
 </body>
 </html>
